feat: 기존 저장소 제거 및 JPA 기반 레포지토리/서비스 레이어 도입
[변경사항 요약]
- FileRepository, JCFRepository 삭제 및 관련 의존성 제거
- JpaRepository 상속 및 도메인별 쿼리 메서드 적용
- 영속성 컨텍스트 특징(변경 감지, 지연 로딩) 반영 및 서비스 로직 리팩터링
- @Transactional을 활용한 트랜잭션 경계 설정 및 데이터 일관성 보장"