@@ -2,33 +2,38 @@ package com.sprint.mission.discodeit.service.basic;
 
 import com.sprint.mission.discodeit.dto.UserDto;
 import com.sprint.mission.discodeit.entity.BinaryContent;
-import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.entity.UserStatus;
 import com.sprint.mission.discodeit.exception.BusinessException;
 import com.sprint.mission.discodeit.exception.ErrorCode;
-import com.sprint.mission.discodeit.repository.*;
+import com.sprint.mission.discodeit.repository.BinaryContentRepository;
+import com.sprint.mission.discodeit.repository.ChannelRepository;
+import com.sprint.mission.discodeit.repository.MessageRepository;
+import com.sprint.mission.discodeit.repository.ReadStatusRepository;
+import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.UserService;
 import java.io.IOException;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class BasicUserService implements UserService {
 
   private final UserRepository userRepository;
   private final ChannelRepository channelRepository;
   private final MessageRepository messageRepository;
-  private final UserStatusRepository userStatusRepository;
   private final BinaryContentRepository binaryContentRepository;
   private final ReadStatusRepository readStatusRepository;
 
+  @Transactional
   @Override
   public UserDto.Response create(UserDto.CreateRequest request, MultipartFile profile) {
     validateDuplicateEmail(request.email());
@@ -41,20 +46,20 @@ public class BasicUserService implements UserService {
         request.email(),
         request.password()
     );
-    userRepository.save(newUser);
 
-    if (userStatusRepository != null) {
-      UserStatus status = new UserStatus(newUser);
-      userStatusRepository.save(status);
+    if (profileImage != null) {
+      newUser.update(null, null, null, profileImage);
     }
 
+    new UserStatus(newUser);
+
+    userRepository.save(newUser);
     return convertToResponse(newUser);
   }
 
   @Override
   public UserDto.Response findById(UUID id) {
-    User user = findUserEntityById(id);
-    return convertToResponse(user);
+    return convertToResponse(findUserEntityById(id));
   }
 
   @Override
@@ -66,14 +71,15 @@ public class BasicUserService implements UserService {
 
   @Override
   public List<User> findUsersByChannelId(UUID channelId) {
-    List<UUID> memberIds = channelRepository.findById(channelId)
-        .map(Channel::getMemberIds)
-        .orElseThrow(() -> new BusinessException(ErrorCode.CHANNEL_NOT_FOUND));
-    return memberIds.stream()
-        .map(this::findUserEntityById)
-        .collect(Collectors.toList());
+    if (!channelRepository.existsById(channelId)) {
+      throw new BusinessException(ErrorCode.CHANNEL_NOT_FOUND);
+    }
+    return readStatusRepository.findAllByChannelId(channelId).stream()
+        .map(ReadStatus::getUser)
+        .toList();
   }
 
+  @Transactional
   @Override
   public UserDto.Response update(UUID userId, UserDto.UpdateRequest request,
       MultipartFile profile) {
@@ -89,51 +95,23 @@ public class BasicUserService implements UserService {
         request.newUsername(),
         request.newEmail(),
         request.newPassword(),
-        newProfile);
-
-    userRepository.save(user);
+        newProfile
+    );
     return convertToResponse(user);
   }
 
+  @Transactional
   @Override
   public void delete(UUID userId) {
-    // 0. 삭제 대상 조회
+
     User user = findUserEntityById(userId);
 
-    // 1. 유저가 작성한 메시지 삭제
-    messageRepository.findAll().stream()
-        .filter(m -> user.equals(m.getAuthor()))
-        .forEach(m -> messageRepository.deleteById(m.getId()));
+    readStatusRepository.deleteByUser(user);
+    userRepository.delete(user);
 
-    // 2. 채널에서 유저 제거
-    channelRepository.findAll().forEach(channel -> {
-      if (channel.getMemberIds().contains(userId)) {
-        channel.removeMember(userId);
-        channelRepository.save(channel);
-      }
-    });
-
-    // 2-1. 유저의 채널 참여 정보(ReadStatus) 삭제
-    readStatusRepository.findAll().stream()
-        .filter(rs -> user.equals(rs.getUser()))
-        .forEach(rs -> readStatusRepository.deleteById(rs.getId()));
-
-    // 3. 바이너리 파일 삭제 (프로필 이미지)
-    if (user.getProfile() != null && binaryContentRepository != null) {
-      binaryContentRepository.deleteById(user.getProfile().getId());
+    if (user.getProfile() != null) {
+      binaryContentRepository.delete(user.getProfile());
     }
-
-    // 4. 유저 상태 정보 삭제
-    if (userStatusRepository != null) {
-      userStatusRepository.findAll().stream()
-          .filter(us -> user.equals(us.getUser()))
-          .findFirst()
-          .ifPresent(us ->
-              userStatusRepository.deleteById(us.getId()));
-    }
-
-    // 5. 유저 삭제
-    userRepository.deleteById(userId);
   }
 
   // 이메일 중복 시 예외를 던져 가입 중단 (Fail-Fast)
@@ -159,10 +137,8 @@ public class BasicUserService implements UserService {
   // [헬퍼 메서드]: 엔티티를 클라이언트 응답용 DTO로 변환 및 데이터 가공
   private UserDto.Response convertToResponse(User user) {
     boolean online = false;
-    if (userStatusRepository != null) {
-      online = userStatusRepository.findById(user.getId())
-          .map(UserStatus::isOnline)
-          .orElse(false);
+    if (user.getStatus() != null) {
+      online = user.getStatus().isOnline();
     }
     return new UserDto.Response(
         user.getId(),
@@ -183,7 +159,7 @@ public class BasicUserService implements UserService {
 
     // 기존 이미지가 있으면 삭제 (Update)
     if (existingProfile != null) {
-      binaryContentRepository.deleteById(existingProfile.getId());
+      binaryContentRepository.delete(existingProfile);
     }
 
     try {
